fixed field representation

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <title>Dossier City Login</title>
     </head>
     <body>
-        Username <input type="text" title="rah">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username">
         <br>
-        Password <input type="password" title="password">
+        <label for="username">Password</label> <input type="password" name="password" id="password">
+        <br>
         <input type="submit">
     </body>
 </html>
