--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
                 </ul>
                 </div> -->
             </div>
-            </nav>
-        <div class="mb-3">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" class="form-control">
-        </div>
-        <div class="mb-3">
-            <label for="username">Password</label> <input type="password" name="password" id="password" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        </nav>
+        <form>
+            <div class="mb-3">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="username">Password</label> <input type="password" name="password" id="password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </body>
 </html>
