--- a/crimes.html
+++ b/crimes.html
@@ -41,6 +41,7 @@
         </div>
         </nav>
         <h1>Crimes</h1>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Crime</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -65,6 +66,89 @@
                 </tr>
             </tbody>
         </table>
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addModalLabel">Add a Crime</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Criminal in Question</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="c_id">
+                                    <option selected>Choose...</option>
+                                    <option value="A">a</option>
+                                    <option value="b">b</option>
+                                    <option value="c">c</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="classification">Classification</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="c_id">
+                                    <option selected>Choose...</option>
+                                    <option value="felony">Felony</option>
+                                    <option value="misdemeanor">Misdemeanor</option>
+                                    <option value="other">Other</option>
+                                    <option value="undefined">Undefined</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="date_charged">Date Charged</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="date_charged" id="date_charged" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="status">
+                                    <option selected>Choose...</option>
+                                    <option value="closed">Closed</option>
+                                    <option value="can_appeal">Can Appeal</option>
+                                    <option value="in_appeal">In Appeal</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="hearing_date">Hearing Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="hearing_date" id="hearing_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="cutoff_date">Appeal Cutoff Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="cutoff_date" id="cutoff_date" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">Add Criminal</button>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
