--- a/sentences.html
+++ b/sentences.html
@@ -41,6 +41,7 @@
         </div>
         </nav>
         <h1>Sentences</h1>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Sentence</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -65,6 +66,75 @@
                 </tr>
             </tbody>
         </table>
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addModalLabel">Add Sentence</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Criminal in Question</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="c_id">
+                                    <option selected>Choose...</option>
+                                    <option value="A">a</option>
+                                    <option value="b">b</option>
+                                    <option value="c">c</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Sentence Type</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="c_id">
+                                    <option selected>Choose...</option>
+                                    <option value="jail_pd">Jail Period</option>
+                                    <option value="house_arrest">House Arrest</option>
+                                    <option value="probation">Probation</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="start_date">Start Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="start_date" id="start_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="end_date">End Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="end_date" id="end_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="violations">Violations</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="violations" id="violations" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">Add Sentence</button>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
