--- a/charges.html
+++ b/charges.html
@@ -41,6 +41,7 @@
         </div>
         </nav>
         <h1>Charges</h1>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Charge</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -67,6 +68,92 @@
                 </tr>
             </tbody>
         </table>
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addModalLabel">Add Charge</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Criminal to Add Charge</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="c_id">
+                                    <option selected>Choose...</option>
+                                    <option value="a">A</option>
+                                    <option value="b">b</option>
+                                    <option value="c">c</option>
+                                    <option value="d">d</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="crime_code">Crime Code</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="crime_code" id="crime_code" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="status">
+                                    <option selected>Choose...</option>
+                                    <option value="pending">Pending</option>
+                                    <option value="guilty">Guilty</option>
+                                    <option value="not_guilty">Not Guilty</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="fine">Fine</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="fine" id="fine" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="court_fee">Court Fee</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="court_fee" id="court_fee" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="amount_paid">Amount Paid</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="amount_paid" id="amount_paid" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="due_date">Due Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="due_date" id="due_date" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">Add Charge</button>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
