--- a/probation_officers.html
+++ b/probation_officers.html
@@ -41,6 +41,7 @@
         </div>
         </nav>
         <h1>Probation Officers</h1>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Probation Officer</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -71,6 +72,108 @@
                 </tr>
             </tbody>
         </table>
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addModalLabel">Add Probation Officer</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="f_name">First Name</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="f_name" id="f_name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="l_name">Last Name</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="l_name" id="l_name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="street">Street</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="street" id="street" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="city">City</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="city" id="city" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="state">State</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="state" id="state" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="zip">ZIP</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="zip" id="zip" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="phone">Phone</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="phone" id="phone" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="email" id="email" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="active" id="active" value="active">
+                                    <label class="form-check-label" for="active">
+                                        Active
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="active" id="inactive" value="inactive">
+                                    <label class="form-check-label" for="inactive">
+                                        Inactive
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">Add Probation Officer</button>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
