--- a/officers.html
+++ b/officers.html
@@ -41,6 +41,7 @@
         </div>
         </nav>
         <h1>Officers</h1>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Officer</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -65,6 +66,84 @@
                 </tr>
             </tbody>
         </table>
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addModalLabel">Add Officer</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="f_name">First Name</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="f_name" id="f_name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="l_name">Last Name</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="l_name" id="f_name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="precinct">Precinct</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="precinct" id="precinct" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="phone">Phone</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="phone" id="phone" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="badge">Badge</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="badge" id="badge" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="active" id="active" value="active">
+                                    <label class="form-check-label" for="active">
+                                        Active
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="active" id="inactive" value="inactive">
+                                    <label class="form-check-label" for="inactive">
+                                        Inactive
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">Add Officer</button>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
