--- a/appeals.html
+++ b/appeals.html
@@ -41,6 +41,7 @@
         </div>
         </nav>
         <h1>Appeals</h1>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Appeal</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -61,6 +62,67 @@
                 </tr>
             </tbody>
         </table>
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="addModalLabel">Add Appeal</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="crime_id">Crime ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="crime_id">
+                                    <option selected>Choose...</option>
+                                    <option value="a">a</option>
+                                    <option value="b">b</option>
+                                    <option value="c">c</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="file_date">Filing Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="file_date" id="file_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="hearing_date">Hearing Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="hearing_date" id="hearing_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="status">
+                                    <option selected>Choose...</option>
+                                    <option value="pending">Pending</option>
+                                    <option value="approved">Approved</option>
+                                    <option value="disapproved">Disapproved</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <button type="button" class="btn btn-primary">Add Appeal</button>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
