--- a/officers.html
+++ b/officers.html
@@ -13,28 +13,25 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="criminals.html">Criminals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Criminals</a>
+                    <a class="nav-link active" aria-current="page" href="probation_officers.html">Probation Officers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Probation Officers</a>
+                    <a class="nav-link active" aria-current="page" href="officers.html">Officers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Officers</a>
+                    <a class="nav-link active" aria-current="page" href="appeals.html">Appeals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Appeals</a>
+                    <a class="nav-link active" aria-current="page" href="charges.html">Charges</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Charges</a>
+                    <a class="nav-link active" aria-current="page" href="sentences.html">Sentences</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Sentences</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Logout</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Logout</a>
                 </li>
             </ul>
             </div>
