two column layout but not the best implementation

--- a/index.html
+++ b/index.html
@@ -20,15 +20,38 @@
                 </div> -->
             </div>
         </nav>
-        <form>
-            <div class="mb-3">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" class="form-control">
+        <div class="container">
+            <div class="row align-items-start">
+                <div class="col me-auto">
+                    <h1>Login</h1>
+                    <form>
+                        <div class="mb-3">
+                            <label for="username">Username</label>
+                            <input type="text" name="username" id="username" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="username">Password</label> <input type="password" name="password" id="password" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                </div>
+                <div class="col me-auto">
+                    <h1>Sign Up</h1>
+                    <form>
+                        <div class="mb-3">
+                            <label for="username">Username</label>
+                            <input type="text" name="username" id="username" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="username">Password</label> <input type="password" name="password" id="password" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="username">Clearance ID</label> <input type="password" name="password" id="password" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="username">Password</label> <input type="password" name="password" id="password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
     </body>
 </html>
