change id things to a text box for now

--- a/appeals.html
+++ b/appeals.html
@@ -73,12 +73,7 @@
                                 <label for="crime_id">Crime ID</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="crime_id">
-                                    <option selected>Choose...</option>
-                                    <option value="a">a</option>
-                                    <option value="b">b</option>
-                                    <option value="c">c</option>
-                                </select>
+                                <input type="text" name="crime_id" id="crime_id" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-3">
