--- a/charges.html
+++ b/charges.html
@@ -79,13 +79,7 @@
                                 <label for="c_id">Criminal to Add Charge</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="c_id">
-                                    <option selected>Choose...</option>
-                                    <option value="a">A</option>
-                                    <option value="b">b</option>
-                                    <option value="c">c</option>
-                                    <option value="d">d</option>
-                                </select>
+                                <input type="text" name="c_id" id="c_id" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-3">
