--- a/crimes.html
+++ b/crimes.html
@@ -77,12 +77,7 @@
                                 <label for="c_id">Criminal in Question</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="c_id">
-                                    <option selected>Choose...</option>
-                                    <option value="A">a</option>
-                                    <option value="b">b</option>
-                                    <option value="c">c</option>
-                                </select>
+                                <input type="text" name="c_id" id="c_id" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-3">
